trying to fix the navbar toggle on mobile

--- a/css/main.css
+++ b/css/main.css
@@ -161,7 +161,7 @@ a img {
 
 /* Titles */
 h1, h2, h3, h4, h5, h6 {
-    font-family: "Raleway";
+    font-family: Calibri,Candara,Segoe,Segoe UI,Optima,Arial,sans-serif;
     font-weight: 300;
     color: #333;
 }
@@ -304,6 +304,7 @@ a:after {
 }
 
 #headerwrap p {
+    font-family: Calibri,Candara,Segoe,Segoe UI,Optima,Arial,sans-serif;
 	color:#ffffff;
 	font-size: 40px;
 	font-weight: 400;
